fix vertical scroll jumping

--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -744,6 +744,11 @@ video {
   display: none;
 }
 
+.size-full {
+  width: 100%;
+  height: 100%;
+}
+
 .h-1 {
   height: 0.25rem;
 }
@@ -775,6 +780,36 @@ video {
 
 .h-full {
   height: 100%;
+}
+
+.h-\[25\%\] {
+  height: 25%;
+}
+
+.h-\[120px\] {
+  height: 120px;
+}
+
+.h-\[500px\] {
+  height: 500px;
+}
+
+.h-\[20px\] {
+  height: 20px;
+}
+
+.h-\[200px\] {
+  height: 200px;
+}
+
+.h-max {
+  height: -webkit-max-content;
+  height: max-content;
+}
+
+.h-min {
+  height: -webkit-min-content;
+  height: min-content;
 }
 
 .max-h-32 {
@@ -818,8 +853,20 @@ video {
   max-height: 140px;
 }
 
+.max-h-full {
+  max-height: 100%;
+}
+
+.max-h-\[200px\] {
+  max-height: 200px;
+}
+
 .min-h-screen {
   min-height: 100vh;
+}
+
+.min-h-0 {
+  min-height: 0px;
 }
 
 .w-1 {
@@ -850,6 +897,21 @@ video {
   width: 100%;
 }
 
+.w-fit {
+  width: -webkit-fit-content;
+  width: fit-content;
+}
+
+.w-max {
+  width: -webkit-max-content;
+  width: max-content;
+}
+
+.w-min {
+  width: -webkit-min-content;
+  width: min-content;
+}
+
 .max-w-screen-desktop {
   max-width: 1128px;
 }
@@ -858,12 +920,20 @@ video {
   max-width: 1280px;
 }
 
+.max-w-full {
+  max-width: 100%;
+}
+
 .flex-\[1\] {
   flex: 1;
 }
 
 .flex-\[3\] {
   flex: 3;
+}
+
+.flex-1 {
+  flex: 1 1 0%;
 }
 
 .shrink-0 {
@@ -1101,6 +1171,10 @@ video {
 .bg-yellow-400 {
   --tw-bg-opacity: 1;
   background-color: rgb(250 204 21 / var(--tw-bg-opacity, 1));
+}
+
+.object-contain {
+  object-fit: contain;
 }
 
 .object-cover {
